--- a/02-angular-app/index.html
+++ b/02-angular-app/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Angular App</title>
+    <!-- 앵귤러는 zone.js 가 필요 -->
     <script src="https://cdn.jsdelivr.net/npm/zone.js@0.11.3/dist/zone.min.js"></script>
   </head>
   <body>
-    <div id="single-spa-application:angular-app"></div>
+<!--    <div id="single-spa-application:angular-app"></div>-->
+    <div id="different-container"></div>
   </body>
 </html>
