--- a/02-vue-app/index.html
+++ b/02-vue-app/index.html
@@ -6,6 +6,7 @@
     <title>Vue App</title>
   </head>
   <body>
-    <div id="single-spa-application:vue-app"></div>
+<!--    <div id="single-spa-application:vue-app"></div>-->
+    <div id="different-container"></div>
   </body>
 </html>
