--- a/06-root-config/index.html
+++ b/06-root-config/index.html
@@ -15,5 +15,8 @@
 
     <!-- Load home app-->
     <script src="http://localhost:8303/main.js"></script>
+
+    <!-- 이전에는 div 들로 했던거가 사라짐 -->
+    <!-- microfrontends-layout.html 로 대체됨 -->
   </body>
 </html>
