--- a/08-root-config/index.html
+++ b/08-root-config/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Root Config</title>
+      <!-- 여기 importmap 에 등록된 친구들은 서로 public interface 를 공유할수 있다. -->
+      <!-- webpack external 에 적자 -->
     <script type="systemjs-importmap">
       {
         "imports": {
